# product_category

./: README.md  pyproject.toml
application/use_case/: base_price_calc_strategy.py  calculate_price_use_case.py  every_n_product_is_free_strategy.py  percentage_discount_strategy.py
config/: config.py
docs/: SCHEMA_DB.md
domain/: category.py  product.py  product_group.py
infra/database/: database.py
infra/database/dbo/: base_shop_model.py  category_model.py  product_group_model.py  product_model.py
