[tool.poetry]
name = "product-category"
version = "0.1.0"
description = ""
authors = ["OTR <49165533+OTR@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
pydantic = {extras = ["settings"], version = "^2.10.6"}
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
